--- a/stack_etudiants/src/styles/elements/body.css
+++ b/stack_etudiants/src/styles/elements/body.css
@@ -1,13 +1,13 @@
+@charset "UTF-8";
 /* ==========================================================================
    BODY / ELEMENT
    Le body permet d'initialiser les propriétés générales de la page.
    Les éléments de la page vont hérités des propriétés inscrite dans body
    ========================================================================== */
-
-   body, html {
-    margin: 0;
-    padding: 0;
-    font-family: 'ABeeZee', sans-serif;
-    overflow-x: hidden;
-    background-color: white;
-  }
+body, html {
+  margin: 0;
+  padding: 0;
+  font-family: "ABeeZee", sans-serif;
+  overflow-x: hidden;
+  background-color: white;
+}/*# sourceMappingURL=body.css.map */
