--- a/stack_etudiants/src/styles/elements/links.css
+++ b/stack_etudiants/src/styles/elements/links.css
@@ -2,22 +2,19 @@
    LINKS / ELEMENTS
    Style de base de tous les liens et bouton du site
    ========================================================================== */
-
 a {
-    color: inherit;
-    text-decoration: none;
-
-    &:hover {
-        color: var(--color-secondary);
-    }
+  color: inherit;
+  text-decoration: none;
+}
+a:hover {
+  color: var(--color-secondary);
 }
 
 .button,
 .button2 {
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    padding: 25px;
-
-    color: var(--color-white);
-}
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  padding: 25px;
+  color: var(--color-white);
+}/*# sourceMappingURL=links.css.map */
